@@ -132,10 +132,10 @@ AT_BANNER([STREAMS SCTP NPI module tests])
 dnl AT_XFAIL_IF([test `id -u` -ne 0])
 
 dnl Test Case XNS/NPI-SCTP/0.1: Check test case guard timer.
-AT_SETUP([sctp-npi-2 test 0.1])
-AT_CHECK([test_sctp_n2 0.1], [], [ignore], [], [], [])
-AT_KEYWORDS([testtimer])
-AT_CLEANUP
+dnl AT_SETUP([sctp-npi-2 test 0.1])
+dnl AT_CHECK([test_sctp_n2 0.1], [], [ignore], [], [], [])
+dnl AT_KEYWORDS([testtimer])
+dnl AT_CLEANUP
 
 dnl Test Case XNS/NPI-SCTP/1.1: Open and close 3 streams
 AT_SETUP([sctp-npi-2 test 1.1])
