@@ -1,5 +1,7 @@
 2006-10-20  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/test/test-sctp_n.c: fixed test cases
+	* tests/testsuite-sctp_n2.at: removed long timeout test
 	* src/drivers/sctp2.c:
 	  - strap out ETSI SACK frequency for testing
 	  - corrections for zero-length messages
